/***********************************************************************
X3 ChangeLog

2010-02-05  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.help: Fix for a minor documentation error where $S
	was used instead of $N.

2010-01-14  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added support for LDAP auth registering initial
	nick when nick registration is enabled.

2010-01-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* src/ioset.c (ioset_listen): Linux -- reasonably -- requires that
	SO_REUSEADDR be set on a socket before binding it to an in-use socket.
	So do that.

	* src/sar.c: Convert "struct sockaddr_storage" to "void *" to comply
	with C99's strict(er) aliasing rules.  Allocate off the stack or
	heap, as appropriate.  Add new function sar_free_nameserver() to
	clean up the heap-allocated data.

2010-01-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: 8ball will now accept "what colour".

2009-12-18  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* x3.conf.example: Added type 8 for Nefarious 1.3.0.

	* src/proto-p10.c: Only use the old cloak.c code if type 7 is given.
	If type 8 is given then the cloaked hosts are picked up during burst
	(+cC)

2009-12-17  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/log.c: Revert message type to 5.

2009-12-17  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-track.c: Fixed a crash with net rider kicks.

2009-12-12  Alex Schumann  <rubin@afternet.org>

	src/x3ldap.c: Fix crash bug with ldap adding users. Deal with some warnings.

	src/x3ldap.h: Deal with some warnings.

2009-12-09  Henrik Stuart  <evilnet@hstuart.dk>

	src/mod-python.c: add support for module_register.

2009-12-09  Henrik Stuart  <evilnet@hstuart.dk>

	src/mod-python.c: add support for log_register_type.

2009-12-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	src/nickserv.c: Shuffle the auto oper functions around to fix a
	desync issue.
